[package]
name = "hello-turso"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hello_turso"

[dependencies]
futures = "0.3"
serde_json = "1.0.96"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpclient = "0.9.0"
wasmcloud-interface-httpserver = "0.10"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
